[gd_scene load_steps=8 format=2]

[ext_resource path="res://resource/ui/pause_menu/background3.png" type="Texture" id=1]
[ext_resource path="res://resource/sounds/clicks/2.wav" type="AudioStream" id=2]
[ext_resource path="res://src/objects/IgnisRegularInner/IgnisRegularInner.tscn" type="PackedScene" id=3]
[ext_resource path="res://resource/ui/yazata.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://src/ui/pauseMenu/pauseMenu.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 5 )

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 11 )

[node name="CenterContainer" type="CenterContainer" parent="."]
light_mask = 2
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CenterContainer"]
light_mask = 2
position = Vector2( 640, 360 )
scale = Vector2( 1, 0.8 )
texture = ExtResource( 1 )

[node name="Pause" type="VBoxContainer" parent="CenterContainer"]
visible = false
light_mask = 2
margin_left = 480.0
margin_top = 231.0
margin_right = 800.0
margin_bottom = 489.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="CenterContainer/Pause"]
light_mask = 2
margin_left = 55.0
margin_right = 265.0
margin_bottom = 66.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
toggle_mode = true
enabled_focus_mode = 0
text = "continue"
flat = true
expand_icon = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ContLight" parent="CenterContainer/Pause/Continue" instance=ExtResource( 3 )]
visible = false
position = Vector2( -30, 40 )
scale = Vector2( 1, 1 )

[node name="Settings" type="Button" parent="CenterContainer/Pause"]
light_mask = 2
margin_left = 52.0
margin_top = 96.0
margin_right = 268.0
margin_bottom = 162.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
toggle_mode = true
enabled_focus_mode = 0
text = "settings"
flat = true
expand_icon = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="SetLight" parent="CenterContainer/Pause/Settings" instance=ExtResource( 3 )]
visible = false
position = Vector2( -30, 40 )
scale = Vector2( 1, 1 )

[node name="MainMenu" type="Button" parent="CenterContainer/Pause"]
light_mask = 2
margin_top = 192.0
margin_right = 320.0
margin_bottom = 258.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
toggle_mode = true
enabled_focus_mode = 0
text = "exit to menu"
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MenuLight" parent="CenterContainer/Pause/MainMenu" instance=ExtResource( 3 )]
visible = false
position = Vector2( -30, 40 )
scale = Vector2( 1, 1 )

[node name="Settings" type="VBoxContainer" parent="CenterContainer"]
light_mask = 2
margin_left = 450.0
margin_top = 277.0
margin_right = 830.0
margin_bottom = 443.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 40

[node name="Label" type="Label" parent="CenterContainer/Settings"]
light_mask = 2
margin_right = 380.0
margin_bottom = 60.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 2 )
text = "fullscreen mode"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="CenterContainer/Settings/Label"]
light_mask = 2
margin_left = 380.0
margin_top = -8.0
margin_right = 404.0
margin_bottom = 16.0
rect_scale = Vector2( 3, 3 )
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckLight" parent="CenterContainer/Settings/Label/CheckBox" instance=ExtResource( 3 )]
visible = false
position = Vector2( 12.1226, 11.0909 )
scale = Vector2( 1, 1 )

[node name="backSettings" type="Button" parent="CenterContainer/Settings"]
light_mask = 2
margin_left = 134.0
margin_top = 100.0
margin_right = 246.0
margin_bottom = 166.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
toggle_mode = true
enabled_focus_mode = 0
text = "back"
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="backLight" parent="CenterContainer/Settings/backSettings" instance=ExtResource( 3 )]
visible = false
position = Vector2( -30, 40 )
scale = Vector2( 1, 1 )

[node name="AudioClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="mouse_entered" from="CenterContainer/Pause/Continue" to="." method="_on_Continue_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/Pause/Continue" to="." method="_on_Continue_mouse_exited"]
[connection signal="pressed" from="CenterContainer/Pause/Continue" to="." method="_on_Continue_pressed"]
[connection signal="mouse_entered" from="CenterContainer/Pause/Settings" to="." method="_on_Settings_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/Pause/Settings" to="." method="_on_Settings_mouse_exited"]
[connection signal="pressed" from="CenterContainer/Pause/Settings" to="." method="_on_Settings_pressed"]
[connection signal="mouse_entered" from="CenterContainer/Pause/MainMenu" to="." method="_on_MainMenu_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/Pause/MainMenu" to="." method="_on_MainMenu_mouse_exited"]
[connection signal="pressed" from="CenterContainer/Pause/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="CenterContainer/Settings/Label/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="mouse_entered" from="CenterContainer/Settings/backSettings" to="." method="_on_backSettings_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/Settings/backSettings" to="." method="_on_backSettings_mouse_exited"]
[connection signal="pressed" from="CenterContainer/Settings/backSettings" to="." method="_on_backSettings_pressed"]
